create nodes and links

--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,16 @@
 [Setup]
-server_url=http://10.0.0.4:3080
+server_url=http://localhost:3080
 
 [Project]
-name=keycloak
+name=untitled
+
+[Nodes]
+node=[
+]
+NAT,Nat1
+EthernetSwitch,EthSwitch1
+TestNode,TestNode1
+TestNode,TestNode2
+#name=nat1, switch1, testnode1
+
+[Links]
