fix multi-instances naming, add 30 test nodes

--- a/config.yml
+++ b/config.yml
@@ -131,58 +131,207 @@ nodes:
     y: -200
     ip: "192.168.122.42"
     gw: "192.168.122.1"
-  - node_type: docker
-    appliance_name: "Test"
-    node_name: TestNode3
-    x: 320
-    y: -100
-    ip: "192.168.122.43"
-    gw: "192.168.122.1"
-  - node_type: docker 
-    appliance_name: "Test"
-    node_name: TestNode4
-    x: 320
-    y: 0
-    ip: "192.168.122.44"
-    gw: "192.168.122.1"
-  - node_type: docker
-    appliance_name: "Test"
-    node_name: TestNode5
-    x: 320
-    y: 100
-    ip: "192.168.122.45"
-    gw: "192.168.122.1"
-  # - appliance_name: "Test"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode3
+  #   x: 320
+  #   y: -100
+  #   ip: "192.168.122.43"
+  #   gw: "192.168.122.1"
+  # - node_type: docker 
+  #   appliance_name: "Test"
+  #   node_name: TestNode4
+  #   x: 320
+  #   y: 0
+  #   ip: "192.168.122.44"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode5
+  #   x: 320
+  #   y: 100
+  #   ip: "192.168.122.45"
+  #   gw: "192.168.122.1"
+    
+  # - node_type: docker
+  #   appliance_name: "Test"
   #   node_name: TestNode6
   #   x: 420
   #   y: -300
   #   ip: "192.168.122.46"
   #   gw: "192.168.122.1"
-  # - appliance_name: "Test"
+  # - node_type: docker
+  #   appliance_name: "Test"
   #   node_name: TestNode7
   #   x: 420
   #   y: -200
   #   ip: "192.168.122.47"
   #   gw: "192.168.122.1"
-  # - appliance_name: "Test"
+  # - node_type: docker
+  #   appliance_name: "Test"
   #   node_name: TestNode8
   #   x: 420
   #   y: -100
   #   ip: "192.168.122.48"
   #   gw: "192.168.122.1"
-  # - appliance_name: "Test"
+  # - node_type: docker
+  #   appliance_name: "Test"
   #   node_name: TestNode9
   #   x: 420
   #   y: 0
   #   ip: "192.168.122.49"
   #   gw: "192.168.122.1"
-  # - appliance_name: "Test"
+  # - node_type: docker
+  #   appliance_name: "Test"
   #   node_name: TestNode10
   #   x: 420
   #   y: 100
   #   ip: "192.168.122.50"
   #   gw: "192.168.122.1"
+    
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode11
+  #   x: 520
+  #   y: -300
+  #   ip: "192.168.122.51"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode12
+  #   x: 520
+  #   y: -200
+  #   ip: "192.168.122.52"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode13
+  #   x: 520
+  #   y: -100
+  #   ip: "192.168.122.53"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode14
+  #   x: 520
+  #   y: 0
+  #   ip: "192.168.122.54"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode15
+  #   x: 520
+  #   y: 100
+  #   ip: "192.168.122.55"
+  #   gw: "192.168.122.1"
 
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode16
+  #   x: 620
+  #   y: -300
+  #   ip: "192.168.122.56"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode17
+  #   x: 620
+  #   y: -200
+  #   ip: "192.168.122.57"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode18
+  #   x: 620
+  #   y: -100
+  #   ip: "192.168.122.58"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode19
+  #   x: 620
+  #   y: 0
+  #   ip: "192.168.122.59"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode20
+  #   x: 620
+  #   y: 100
+  #   ip: "192.168.122.60"
+  #   gw: "192.168.122.1"
+
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode21
+  #   x: 720
+  #   y: -300
+  #   ip: "192.168.122.61"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode22
+  #   x: 720
+  #   y: -200
+  #   ip: "192.168.122.62"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode23
+  #   x: 720
+  #   y: -100
+  #   ip: "192.168.122.63"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode24
+  #   x: 720
+  #   y: 0
+  #   ip: "192.168.122.64"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode25
+  #   x: 720
+  #   y: 100
+  #   ip: "192.168.122.65”
+  #   gw: "192.168.122.1"
+
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode26
+  #   x: 820
+  #   y: -300
+  #   ip: "192.168.122.66"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode27
+  #   x: 820
+  #   y: -200
+  #   ip: "192.168.122.67"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode28
+  #   x: 820
+  #   y: -100
+  #   ip: "192.168.122.68"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode29
+  #   x: 820
+  #   y: 0
+  #   ip: "192.168.122.69"
+  #   gw: "192.168.122.1"
+  # - node_type: docker
+  #   appliance_name: "Test"
+  #   node_name: TestNode30
+  #   x: 820
+  #   y: 100
+  #   ip: "192.168.122.70"
+  #   gw: "192.168.122.1"
 
 links:
   ### switch cluster
@@ -205,10 +354,12 @@ links:
     port_num1: 3
     node2: Keycloak1
     port_num2: 0
+    # filter: [0,10,20,30]
   - node1: EthSwitch1
     port_num1: 4
     node2: Hls1
     port_num2: 0
+    # filter: [40,50,60,70]
   - node1: EthSwitch1
     port_num1: 5
     node2: Hls2
@@ -235,18 +386,19 @@ links:
     port_num1: 4
     node2: TestNode2
     port_num2: 0
-  - node1: EthSwitch2
-    port_num1: 5
-    node2: TestNode3
-    port_num2: 0
-  - node1: EthSwitch2
-    port_num1: 6
-    node2: TestNode4
-    port_num2: 0
-  - node1: EthSwitch2
-    port_num1: 7
-    node2: TestNode5
-    port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 5
+  #   node2: TestNode3
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 6
+  #   node2: TestNode4
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 7
+  #   node2: TestNode5
+  #   port_num2: 0
+
   # - node1: EthSwitch2
   #   port_num1: 8
   #   node2: TestNode6
@@ -266,6 +418,90 @@ links:
   # - node1: EthSwitch2
   #   port_num1: 12
   #   node2: TestNode10
+  #   port_num2: 0
+
+  # - node1: EthSwitch2
+  #   port_num1: 13
+  #   node2: TestNode11
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 14
+  #   node2: TestNode12
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 15
+  #   node2: TestNode13
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 16
+  #   node2: TestNode14
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 17
+  #   node2: TestNode15
+  #   port_num2: 0
+
+  # - node1: EthSwitch2
+  #   port_num1: 18
+  #   node2: TestNode16
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 19
+  #   node2: TestNode17
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 20
+  #   node2: TestNode18
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 21
+  #   node2: TestNode19
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 22
+  #   node2: TestNode20
+  #   port_num2: 0
+
+  # - node1: EthSwitch2
+  #   port_num1: 23
+  #   node2: TestNode21
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 24
+  #   node2: TestNode22
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 25
+  #   node2: TestNode23
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 26
+  #   node2: TestNode24
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 27
+  #   node2: TestNode25
+  #   port_num2: 0
+
+  # - node1: EthSwitch2
+  #   port_num1: 28
+  #   node2: TestNode26
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 29
+  #   node2: TestNode27
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 30
+  #   node2: TestNode28
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 31
+  #   node2: TestNode29
+  #   port_num2: 0
+  # - node1: EthSwitch2
+  #   port_num1: 32
+  #   node2: TestNode30
   #   port_num2: 0
 
   ### Monitoring cluster
